@@ -1,7 +1,7 @@
 
-R version 3.1.0 (2014-04-10) -- "Spring Dance"
-Copyright (C) 2014 The R Foundation for Statistical Computing
-Platform: x86_64-apple-darwin13.1.0 (64-bit)
+R version 4.4.1 (2024-06-14) -- "Race for Your Life"
+Copyright (C) 2024 The R Foundation for Statistical Computing
+Platform: aarch64-apple-darwin20
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -16,6 +16,9 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > library(survey)
+Loading required package: grid
+Loading required package: Matrix
+Loading required package: survival
 
 Attaching package: 'survey'
 
@@ -47,8 +50,8 @@ Stratified Independent Sampling design (with replacement)
 svydesign(weights = 1, ids = ~0, strata = ~stratid, variables = ~x, 
     data = fpc, nest = TRUE)
 > svymean(~x,a)
-  mean    SE
-x 44.2 6.237
+   mean     SE
+x 5.525 0.7796
 > a<-svydesign(ids=~0, strata=~stratid, variables=~x, data=fpc, nest=TRUE)
 Warning message:
 In svydesign.default(ids = ~0, strata = ~stratid, variables = ~x,  :
@@ -157,4 +160,4 @@ x 5.4481 0.616
 > 
 > proc.time()
    user  system elapsed 
-  0.201   0.024   0.232 
+  0.512   0.053   0.561 
